--- a/gb/15/6/22/n4462753.md
+++ b/gb/15/6/22/n4462753.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/cqgugh3693/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/cqgugh3693/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/cqgugh3693/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/cqgugh3693/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/cqgugh3693/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cqgugh3693/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/cqgugh3693/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/cqgugh3693/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/cqgugh3693/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/cqgugh3693/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/cqgugh3693/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/cqgugh3693/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/cqgugh3693/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/cqgugh3693/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/cqgugh3693/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/cqgugh3693/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/cqgugh3693/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/cqgugh3693/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/cqgugh3693/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/cqgugh3693/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/cqgugh3693/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/cqgugh3693/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/cqgugh3693/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>哈尔滨外科医生控告江泽民 曾遭性虐待迫害</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2015/06/1506211352182192-340x400.jpg" />
 <h6>酷刑演示：浇凉水（明慧网）
 </h6>
 <hr>
-	<p>【大纪元2015年06月22日讯】哈尔滨医科大学附属第一医院的前骨外科主治医生、现年四十二岁的法轮功学员李力壮，于二零一五年六月十七日，向最高人民检察院和最高人民法院<ahref="https://github.com/cqgugh3693/djy/blob/master/gb/tag/%E6%8E%A7%E5%91%8A.md#1">控告</a>迫害法轮功的恶首<ahref="https://github.com/cqgugh3693/djy/blob/master/gb/tag/%E6%B1%9F%E6%B3%BD%E6%B0%91.md#1">江泽民</a>，要求依法追究被告人江泽民滥用职权践踏宪法和法律制造民族浩劫的所有罪行，并依法恢复控告人的工作，补发十五年来的合法经济所得并依法申请国家赔偿。</p>
+	<p>【大纪元2015年06月22日讯】哈尔滨医科大学附属第一医院的前骨外科主治医生、现年四十二岁的法轮功学员李力壮，于二零一五年六月十七日，向最高人民检察院和最高人民法院<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%8E%A7%E5%91%8A.md#1">控告</a>迫害法轮功的恶首<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B1%9F%E6%B3%BD%E6%B0%91.md#1">江泽民</a>，要求依法追究被告人江泽民滥用职权践踏宪法和法律制造民族浩劫的所有罪行，并依法恢复控告人的工作，补发十五年来的合法经济所得并依法申请国家赔偿。</p>
 <p>李力壮修炼法轮功后，他自觉按“真、善、忍”原则做人做事，工作中尽职负责，任劳任怨，在努力提高医术水平的同时，尽自己的能力帮助别人；患者给红包从来不收，主动帮助别人不求回报；他毕业一两年的时候，有位农村患者经济困难，没钱配血做手术，为不耽误治疗，他无偿拿出一千多元为患者配血做手术，而他当时每月工资只有三百多元，这事后来医院领导、职工知道了都感到很敬佩。</p>
 <p>这样一位任劳任怨的年轻医生因为坚持信仰“真善忍”和为法轮功和平上访，却遭多次非法关押、抄家，二次非法劳教、一次非法判刑，经受了毒打、电击、关小号、不让睡觉、性虐待、奴工各种酷刑折磨，精神、肉体遭受了巨大的创痛，大好青春有六年半是在非法囚禁中度过的。</p>
 <p><h2>当局栽赃天安门自焚案不合医学常识走出来上访</h2>
-<p>法轮大法明慧网6月21日报导，李力壮在<ahref="https://github.com/cqgugh3693/djy/blob/master/gb/tag/%E6%8E%A7%E5%91%8A.md#1">控告</a>状中讲述了自己和平上访的原因：“当年二十七岁的我风华正茂，正准备继续攻读在职骨外科硕士学位（考试通过，学费都已经交了），用自己一身所学努力回报社会的时候，灾难降临了，一九九九年，<ahref="https://github.com/cqgugh3693/djy/blob/master/gb/tag/%E6%B1%9F%E6%B3%BD%E6%B0%91.md#1">江泽民</a>违反宪法一手发动了对法轮功善良群众的残酷迫害，我的工作、生活从此不再宁静，父亲来到我工作单位 整天看着我，单位领导多次找谈话，要我放弃信仰，各种压力随之而来。那时媒体、电台报纸铺天盖地的打压，后来还制作了天安门自焚等污蔑法轮功的报导，我是外科医生，气管切开手术我做过，切开以后漏气没有气流冲击声带是不能正常发音的，更不可能声音正常的唱歌，看焦点访谈中‘自焚’的小姑娘刘思影，全身裹着纱布，做完气管切开手术接受采访时，竟然能声音清脆的说话唱歌，这不符合医学常识啊！”</p>
+<p>法轮大法明慧网6月21日报导，李力壮在<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%8E%A7%E5%91%8A.md#1">控告</a>状中讲述了自己和平上访的原因：“当年二十七岁的我风华正茂，正准备继续攻读在职骨外科硕士学位（考试通过，学费都已经交了），用自己一身所学努力回报社会的时候，灾难降临了，一九九九年，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B1%9F%E6%B3%BD%E6%B0%91.md#1">江泽民</a>违反宪法一手发动了对法轮功善良群众的残酷迫害，我的工作、生活从此不再宁静，父亲来到我工作单位 整天看着我，单位领导多次找谈话，要我放弃信仰，各种压力随之而来。那时媒体、电台报纸铺天盖地的打压，后来还制作了天安门自焚等污蔑法轮功的报导，我是外科医生，气管切开手术我做过，切开以后漏气没有气流冲击声带是不能正常发音的，更不可能声音正常的唱歌，看焦点访谈中‘自焚’的小姑娘刘思影，全身裹着纱布，做完气管切开手术接受采访时，竟然能声音清脆的说话唱歌，这不符合医学常识啊！”</p>
 <p><h2>遭毒打、电击、关小号、不让睡觉等酷刑</h2>
 <p>李力壮于二零零一年五月下旬被哈尔滨香坊分局警察绑架，在派出所遭到毒打，上背铐，手麻了好几个月，后被关到香坊看守所，遭坐铁椅子酷刑折磨约一周，不让睡觉，一合眼就会遭到犯罪嫌疑人毒打，被狠毒的用脚踹头撞墙，用拳头打，脸肿起来都变形了，眼睛只剩了一条缝，腿部严重水肿增粗，后被非法批二年劳教送到哈尔滨长林子劳教所。</p>
 <p>二零零二年四月，李力壮在哈尔滨长林子劳教所遭到当时的所长石昌敬带头吊铐、电棍电击、毒打、坐铁椅子、关小号迫害约二个月。在一次劳教人员会议上李力壮揭露了迫害信仰者的非法性及殴打虐待法轮功学员是执法犯法，石昌敬当时是所长觉得丢了面子，后来石昌敬与三队队长王占起滥用职权打击报复指使干警胁迫引诱（以减刑为条件）被监管人作伪证说李力壮是绝食的组织者（做伪证的劳教人员有彭瑞滨、刘滨等），随后李力壮于二零零二年七月三十日遭非法批捕，非法劳教没结束又被劫持到哈尔滨市太平区看守所，二零零二年九月十一日，哈尔滨市滨江地区检察院以哈滨检刑诉（2002）8号起诉书非法向哈尔滨市太平区法院提起公诉李力壮。</p>
@@ -35,7 +35,7 @@
 <p><h2>年迈父母承受巨大压力</h2>
 <p>在李力壮被非法囚禁期间，年迈的父母顶着来自各方的压力，几乎每月往返于劳教所和监狱，为他背送食物、生活用品去看望他，怕他挨打，怕他挨饿，精神承受已 超过极限，父亲因此得了抑郁症，很长时间才治好，后来因为长期精神压力过大，每次背送东西过重，又添了腰椎病，现在仍后遗腿疼和抽筋，内心的痛苦无处诉说。</p>
 <p>二零零零年李力壮和平上访遭到绑架以来，他母亲原来一百五十多斤的体重，数月之内降到一百一十多斤，食不甘味，多少个年节都是流着眼泪度过的；晚上经常失眠，安眠药吃的量越来越大，头发迅速变白，后又得了高血压。迫害的阴影，骨肉分离的悲痛时时折磨着他们。</p>
-<p><h2>起<ahref="https://github.com/cqgugh3693/djy/blob/master/gb/tag/%E8%AF%89%E6%B1%9F.md#1">诉江</a>泽民还社会公平、公正、正义</h2>
+<p><h2>起<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%AF%89%E6%B1%9F.md#1">诉江</a>泽民还社会公平、公正、正义</h2>
 <p>李力壮在刑事控告状中说，江泽民对他涉嫌犯下了刑讯逼供罪、虐待被监管人罪、报复陷害罪、非法拘禁罪、滥用职权罪、徇私枉法罪、非法搜查罪、非法侵入住宅罪 、非法剥夺公民宗教信仰自由罪、强迫劳动罪、侮辱罪、诽谤罪、故意伤害罪等；江泽民不仅违犯了多部中国的法律，也同样违犯了国际法，依照国际法江泽民同时犯下了酷刑罪、群体灭绝罪和反人类罪，因此向最高人民检察院、最高人民法院提出起诉请求，追究被控告人江泽民的刑事责任，还社会以公平、公正、正义。</p>
 <p>责任编辑：高静</p>
 	
@@ -43,35 +43,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/15/6/14/n4457571.md#1">大陆女律师声援诉江潮：律师介入影响更大</a></li>
-<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/15/6/16/n4458576.md#1">历经2次濒死重生的“弱女子”控告江泽民</a></li>
-<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/15/6/16/n4459292.md#1">前美国智库研究员声援告江 “一个大审判序幕开始”</a></li>
-<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/15/6/17/n4459389.md#1">乌克兰首任民选总统支持控告江泽民</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/6/14/n4457571.md#1">大陆女律师声援诉江潮：律师介入影响更大</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/6/16/n4458576.md#1">历经2次濒死重生的“弱女子”控告江泽民</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/6/16/n4459292.md#1">前美国智库研究员声援告江 “一个大审判序幕开始”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/6/17/n4459389.md#1">乌克兰首任民选总统支持控告江泽民</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/11/n11446216.md#1" target="_blank">夏祷：2019火种：天象巨变（2）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/27/n11481899.md#1" target="_blank">美严审迫害者签证 震慑中共 精英支持</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/26/n10809856.md#1" target="_blank">严家伟：人间地狱，四川古蔺岔角滩</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/9/14/n3683060.md#1" target="_blank">【石静笛】：网在收！活摘器官再成舆论焦点</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/20/3/24/n11971400.md#1">最新翻墙软件 突破封锁访问大纪元新唐人</a></li>
-<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/20/3/24/n11970670.md#1">华春莹找上美国务院发言人辩论 又遭漏底</a></li>
-<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/20/3/24/n11970667.md#1">任志强视频热传 批中共体制烂透 吁国人推墙</a></li>
-<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/20/3/25/n11972610.md#1">6万武汉人封城前外逃 路线与欧美疫情吻合？</a></li>
-<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/20/3/25/n11972094.md#1">捂不住了 大陆金融系统至少千人染中共病毒</a></li>
-<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/20/3/25/n11973180.md#1">辛龙憔悴赴灵堂 瞒着女儿说：妈妈去旅行了</a></li>
-<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/20/3/25/n11973870.md#1">辛龙灵堂伴妻5小时 双手合十离开未受访</a></li>
-<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/20/3/24/n11969412.md#1">刘真灵堂预计25日开放 追思会下月举行</a></li>
-<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/20/3/24/n11971575.md#1">宣传新片时自称亚裔 刘亦菲遭大陆网民骂翻</a></li>
-<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/20/3/23/n11967623.md#1">晒合照悼念刘真 翁虹：遗憾无法实现舞林之约</a></li>
-<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/20/3/22/n11962482.md#1">《推背图》第7象归序 谈庚子流年</a></li>
-<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/20/3/23/n11967225.md#1">成规模毁灭事件中的悬案 明朝王恭厂大爆炸</a></li>
-<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/20/2/27/n11900217.md#1">【历史上的瘟疫】上帝之鞭：欧洲黑死病</a></li>
-<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/20/3/24/n11969439.md#1">中国古代的“飞天”舞蹈家</a></li>
-<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/13/2/3/n3792263.md#1">米开朗基罗（2） 成名作《圣殇》</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/cqgugh3693/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/cqgugh3693/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/15/6/22/n4462753.htm">哈尔滨外科医生控告江泽民 曾遭性虐待迫害</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/15/6/22/n4462753.htm">哈尔滨外科医生控告江泽民 曾遭性虐待迫害</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/cqgugh3693/djy/blob/master/gb/15/6/22/n4462753.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/cqgugh3693/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/cqgugh3693/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/cqgugh3693/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/15/6/22/n4462753.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
